--- a/styles/bio.css
+++ b/styles/bio.css
@@ -2,5 +2,103 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Nunito Sans, sans-serif;
+}
+
+.hero {
+  position: relative;
+  height: 500px;
+  overflow: hidden;
+}
+.hero__image-wrapper {
+  width: 100%;
+  height: 100%;
+}
+.hero__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.hero__text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  width: 90%;
+  box-sizing: border-box;
+  z-index: 2;
+}
+.hero__title {
+  font-size: 3rem;
+  margin: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (min-width: 480px) {
+  .hero {
+    height: 400px;
+  }
+  .hero__content {
+    top: 50%;
+    left: 50%;
+  }
+  .hero__title {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 550px;
+  }
+  .hero__content {
+    top: 50%; /* Center the content vertically on tablet */
+    left: 50%; /* Center horizontally */
+    transform: translate(-50%, -50%);
+  }
+  .hero__title {
+    font-size: 3.5rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero {
+    height: 600px;
+  }
+  .hero__content {
+    top: 50%; /* Keep the content centered on desktop */
+    left: 50%; /* Center horizontally */
+    transform: translate(-50%, -50%);
+  }
+  .hero__title {
+    font-size: 4rem;
+  }
+}
+.about {
+  position: absolute;
+  height: 500px;
+  overflow: hidden;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about__image {
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  .about {
+    height: 250px;
+  }
+  .about__image {
+    background-size: cover;
+    -o-object-fit: contain;
+       object-fit: contain;
+    height: auto;
+  }
 }/*# sourceMappingURL=bio.css.map */
