--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,8 +1,118 @@
 @use 'partials/variables' as *;
 @use 'partials/mixins' as *;
+@use 'partials/variables' as *;
 html,
 body {
   margin: 0;
   padding: 0;
-  font-family: $font-stack;
+}
+
+.hero {
+  position: relative;
+  height: 500px;
+  overflow: hidden;
+
+  &__image-wrapper {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  &__text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    width: 90%;
+    box-sizing: border-box;
+    z-index: 2;
+  }
+
+  &__title {
+    font-size: 3rem;
+    margin: 0;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  }
+}
+
+@include mobile {
+  .hero {
+    height: 400px;
+
+    &__content {
+      top: 50%;
+      left: 50%;
+    }
+
+    &__title {
+      font-size: 2.5rem;
+    }
+  }
+}
+
+@include tablet {
+  .hero {
+    height: 550px;
+
+    &__content {
+      top: 50%; /* Center the content vertically on tablet */
+      left: 50%; /* Center horizontally */
+      transform: translate(-50%, -50%);
+    }
+
+    &__title {
+      font-size: 3.5rem;
+    }
+  }
+}
+
+@include desktop {
+  .hero {
+    height: 600px;
+
+    &__content {
+      top: 50%; /* Keep the content centered on desktop */
+      left: 50%; /* Center horizontally */
+      transform: translate(-50%, -50%);
+    }
+
+    &__title {
+      font-size: 4rem;
+    }
+  }
+}
+.about {
+  position: absolute;
+  height: 500px;
+  overflow: hidden;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &__image {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .about {
+    height: 250px;
+
+    &__image {
+      background-size: cover;
+      object-fit: contain;
+      height: auto;
+    }
+  }
 }
