--- a/styles/bio.css
+++ b/styles/bio.css
@@ -85,8 +85,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
-.about__image {
+.about__musician__image {
   width: 100%;
   height: 100%;
 }
