--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -98,8 +98,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 
-  &__image {
+  &__musician__image {
     width: 100%;
     height: 100%;
   }
