--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Nunito";
+  src: url("/assets/font/NunitoSans-Bold.woff"), url("/assets/font/NunitoSans-Medium.woff"), url("/assets/font/NunitoSans-Regular.woff");
+}
 html,
 body {
   margin: 0;
@@ -8,6 +12,11 @@ body {
   position: relative;
   height: 500px;
   overflow: hidden;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 31.25rem;
+  }
 }
 .hero__image-wrapper {
   width: 100%;
@@ -27,36 +36,32 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   width: 90%;
   box-sizing: border-box;
   z-index: 2;
 }
 .hero__title {
-  font-size: 3rem;
-  margin: 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2rem;
+  margin-left: 1rem;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
-
-@media screen and (min-width: 480px) {
-  .hero {
-    height: 400px;
-  }
-  .hero__content {
-    top: 50%;
-    left: 50%;
-  }
+@media screen and (min-width: 768px) {
   .hero__title {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
   }
 }
+
 @media screen and (min-width: 768px) {
   .hero {
     height: 550px;
   }
   .hero__content {
-    top: 50%; /* Center the content vertically on tablet */
-    left: 50%; /* Center horizontally */
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
   }
   .hero__title {
@@ -68,15 +73,15 @@ body {
     height: 600px;
   }
   .hero__content {
-    top: 50%; /* Keep the content centered on desktop */
-    left: 50%; /* Center horizontally */
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
   }
   .hero__title {
     font-size: 4rem;
   }
 }
-.about {
+.about-musician {
   position: absolute;
   height: 500px;
   overflow: hidden;
@@ -87,7 +92,7 @@ body {
   align-items: center;
   width: 100%;
 }
-.about__musician__image {
+.about-musician__image {
   width: 100%;
   height: 100%;
 }
