--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,6 +1,6 @@
 @use 'partials/variables' as *;
 @use 'partials/mixins' as *;
-@use 'partials/variables' as *;
+@use 'partials/fonts' as *;
 html,
 body {
   margin: 0;
@@ -11,6 +11,9 @@ body {
   position: relative;
   height: 500px;
   overflow: hidden;
+  @include tablet {
+    height: 31.25rem;
+  }
 
   &__image-wrapper {
     width: 100%;
@@ -30,30 +33,22 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #fff;
+    color: $white;
     width: 90%;
     box-sizing: border-box;
     z-index: 2;
   }
 
   &__title {
-    font-size: 3rem;
-    margin: 0;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 2rem;
+    // margin: 0;
+    margin-left: $mobile-gutter;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  }
-}
-
-@include mobile {
-  .hero {
-    height: 400px;
-
-    &__content {
-      top: 50%;
-      left: 50%;
-    }
-
-    &__title {
-      font-size: 2.5rem;
+    @include tablet {
+      font-size: 2.25rem;
+      line-height: 2.75rem;
     }
   }
 }
@@ -63,8 +58,8 @@ body {
     height: 550px;
 
     &__content {
-      top: 50%; /* Center the content vertically on tablet */
-      left: 50%; /* Center horizontally */
+      top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
     }
 
@@ -79,8 +74,8 @@ body {
     height: 600px;
 
     &__content {
-      top: 50%; /* Keep the content centered on desktop */
-      left: 50%; /* Center horizontally */
+      top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
     }
 
@@ -89,7 +84,7 @@ body {
     }
   }
 }
-.about {
+.about-musician {
   position: absolute;
   height: 500px;
   overflow: hidden;
@@ -99,8 +94,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-
-  &__musician__image {
+  &__image {
     width: 100%;
     height: 100%;
   }
