--- a/styles/bio.css
+++ b/styles/bio.css
@@ -19,17 +19,15 @@ body {
   }
 }
 .hero__image-wrapper {
+  position: relative;
   width: 100%;
   height: 100%;
 }
-
 .hero__image {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
 }
 .hero__text {
   position: absolute;
