--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -9,16 +9,36 @@ body {
 
 .hero {
   position: relative;
-  height: 500px;
+  height: 14rem;
   overflow: hidden;
+
   @include tablet {
     height: 31.25rem;
   }
+
+  @include desktop {
+    height: 37rem;
+  }
+
   &__image-wrapper {
     position: relative;
     width: 100%;
     height: 100%;
+    display: flex;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $BandSite-Black;
+      opacity: 0.5;
+      z-index: 1;
+    }
   }
+
   &__image {
     width: 100%;
     height: 100%;
@@ -28,84 +48,49 @@ body {
   &__text {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 25%;
     transform: translate(-50%, -50%);
-    text-align: center;
-    color: $white;
-    width: 90%;
-    box-sizing: border-box;
     z-index: 2;
+    text-align: center;
+
+    @include tablet {
+      left: 24%;
+    }
+    @include desktop {
+      left: 25%;
+    }
   }
 
   &__title {
     font-size: 1.5rem;
-    font-weight: 700;
     line-height: 2rem;
-    // margin: 0;
-    margin-left: $mobile-gutter;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    font-weight: bold 700;
+    color: $white;
     @include tablet {
-      font-size: 2.25rem;
-      line-height: 2.75rem;
+      font-size: 3.75rem;
+      line-height: 68px;
+      font-weight: bold 700;
+    }
+    @include desktop {
+      font-size: 3.75rem;
+      line-height: 68px;
+      font-weight: bold 700;
     }
   }
 }
 
-@include tablet {
-  .hero {
-    height: 550px;
-
-    &__content {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    &__title {
-      font-size: 3.5rem;
-    }
-  }
-}
-
-@include desktop {
-  .hero {
-    height: 600px;
-
-    &__content {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    &__title {
-      font-size: 4rem;
-    }
-  }
-}
-.about-musician {
-  position: absolute;
-  height: 500px;
-  overflow: hidden;
-  padding-left: 20px;
-  padding-right: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  &__image {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-@media (max-width: 768px) {
-  .about {
-    height: 250px;
-
-    &__image {
-      background-size: cover;
-      object-fit: contain;
-      height: auto;
-    }
-  }
-}
+// .about-musician {
+//   position: absolute;
+//   height: 500px;
+//   overflow: hidden;
+//   padding-left: 20px;
+//   padding-right: 20px;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 100%;
+//   &__image {
+//     width: 100%;
+//     height: 100%;
+//   }
+// }
