--- a/styles/bio.css
+++ b/styles/bio.css
@@ -83,4 +83,66 @@ body {
     line-height: 68px;
     font-weight: bold 700;
   }
+}
+
+.about-musician {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+.about-musiciantext {
+  text-align: left;
+  padding: 24px 0;
+}
+.about-musician__heading {
+  margin: 0;
+  font-size: 0.875rem;
+  line-height: 32px;
+  font-weight: 700;
+  color: #000000;
+}
+.about-musician__image-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.about-musician__image {
+  width: 100%;
+  height: 70%;
+  border-radius: 0.1rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.about-musician__quote {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 700;
+  color: #323232;
+}
+.about-musician __role {
+  font-weight: 700;
+  font-size: 0.875rem;
+  margin-top: 8px;
+}
+.about-musician .about-musician__description {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+.about-musician .about-musician__description-title {
+  font-size: 0.875rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  color: #323232;
+}
+.about-musician .about-musician__description-text {
+  font-size: 0.8125rem;
+  line-height: 1.4;
+  font-weight: 400;
+  color: #323232;
+  text-align: justify;
 }/*# sourceMappingURL=bio.css.map */
