--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -78,19 +78,67 @@ body {
     }
   }
 }
+.about-musician {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  &text {
+    text-align: left;
+    padding: 24px 0;
+  }
+  &__heading {
+    margin: 0;
+    font-size: 0.875rem;
+    line-height: 32px;
+    font-weight: 700;
+    color: $BandSite-DarkBlack;
+  }
 
-// .about-musician {
-//   position: absolute;
-//   height: 500px;
-//   overflow: hidden;
-//   padding-left: 20px;
-//   padding-right: 20px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   width: 100%;
-//   &__image {
-//     width: 100%;
-//     height: 100%;
-//   }
-// }
+  &__image-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+  }
+
+  &__image {
+    width: 100%;
+    height: 70%;
+    border-radius: 0.1rem;
+    object-fit: cover;
+  }
+  &__quote {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 700;
+    color: $BandSite-Black;
+  }
+  __role {
+    font-weight: 700;
+    font-size: 0.875rem;
+    margin-top: 8px;
+  }
+  .about-musician__description {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+
+    &-title {
+      font-size: 0.875rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+      color: $BandSite-Black;
+    }
+
+    &-text {
+      font-size: 0.8125rem;
+      line-height: 1.4;
+      font-weight: 400;
+      color: $BandSite-Black;
+      text-align: justify;
+    }
+  }
+}
