--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -19,7 +19,7 @@ body {
   }
 
   @include desktop {
-    height: 37rem;
+    height: 36rem;
   }
 
   &__image-wrapper {
@@ -48,6 +48,8 @@ body {
   }
 
   &__text {
+    font-family: $font-stack;
+    font-weight: 700;
     position: absolute;
     top: 50%;
     left: 25%;
@@ -59,24 +61,26 @@ body {
       left: 24%;
     }
     @include desktop {
-      left: 25%;
+      left: 26%;
     }
   }
 
   &__title {
     font-size: 1.5rem;
     line-height: 2rem;
-    font-weight: bold 700;
+    font-weight: 700;
+    font-family: $font-stack;
     color: $white;
+
     @include tablet {
       font-size: 3.75rem;
-      line-height: 68px;
-      font-weight: bold 700;
+      line-height: 4.25rem;
+      font-weight: bold;
     }
     @include desktop {
       font-size: 3.75rem;
-      line-height: 68px;
-      font-weight: bold 700;
+      line-height: 4.25rem;
+      font-weight: bold;
     }
   }
 }
@@ -88,6 +92,10 @@ body {
   padding: 1rem;
 
   @include tablet {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     padding: 48px;
   }
 
@@ -104,21 +112,25 @@ body {
     }
 
     @include desktop {
-      padding: 36px 0;
+      padding: 38px 0;
     }
   }
 
-  &__heading {
+  &__heading-text {
     margin: 0;
-    font-size: 0.875rem;
-    line-height: 32px;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-family: $font-stack;
     font-weight: 700;
     color: $BandSite-Black;
 
     @include tablet {
-      flex-direction: row;
-      align-items: center;
-      font-size: 2rem;
+      font-size: 2.25rem;
+      line-height: 2.75rem;
+    }
+    @include desktop {
+      font-size: 2.25rem;
+      line-height: 2.75rem;
     }
   }
 
@@ -127,11 +139,44 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 
     @include tablet {
       width: 80%;
-      align-items: center;
-      margin-left: 6.5rem;
+      margin: 0 auto;
+    }
+    @include desktop {
+      width: 70%;
+      margin: 0 auto;
+    }
+  }
+  &__quote {
+    margin: 0;
+
+    padding: 16px 0;
+    text-align: left;
+    font-size: 0.875rem;
+    font-family: $font-stack;
+    line-height: 1.35rem;
+    font-weight: 700;
+    color: $BandSite-Black;
+
+    @include tablet {
+      flex-direction: column;
+      padding: 36px 0;
+      width: 100%;
+
+      font-size: 1.5rem;
+      line-height: 2rem;
+      font-weight: medium;
+    }
+
+    @include desktop {
+      padding: 36px 0;
+      font-size: 24px;
+      line-height: 32px;
+      font-weight: medium;
     }
   }
 
@@ -142,57 +187,59 @@ body {
     object-fit: cover;
   }
 
-  &__quote {
-    margin: 0;
-    padding: 16px 0;
-    text-align: left;
+  &__description {
     font-size: 0.875rem;
-    line-height: 1.375rem;
     font-weight: 700;
-    color: $BandSite-Black;
-
+    margin-top: 0;
     @include tablet {
-      padding: 36px 0;
+      font-size: 1.5rem;
+      line-height: 1.375rem;
+      font-weight: 500;
+      display: flex;
+      flex-direction: row;
     }
-
-    @include desktop {
-      padding: 36px 0;
-    }
+  }
+  &__description-text {
+    font-weight: 400;
   }
 }
 
-// Gallery Section
+// Gallery styles
 .gallery {
   text-align: center;
+  margin: 0 auto;
+  padding: 16px;
 
   &__title {
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: $BandSite-Black;
-    margin-bottom: 1rem;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: bold;
+    margin-bottom: 24px;
   }
 
   &__container {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     gap: 16px;
+  }
+
+  .gallery__item {
+    flex: 1 1 100%;
+    max-width: 100%;
+    aspect-ratio: 16 / 9;
+    margin-bottom: 16px;
+    border-radius: 2px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    object-fit: cover;
 
     @include tablet {
-      gap: 36px;
-      padding: 36px;
+      flex: 1 1 30%;
+      max-width: 30%;
     }
 
     @include desktop {
-      gap: 36px;
-      padding: 48px;
-    }
-
-    .gallery__item {
-      width: 100%;
-      object-fit: cover;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
     }
   }
 }
