--- a/styles/bio.css
+++ b/styles/bio.css
@@ -229,9 +229,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  box-sizing: border-box;
   gap: 16px;
 }
 .gallery .gallery__item {
+  aspect-ratio: 16/9;
   flex: 1 1 100%;
   max-width: 100%;
   aspect-ratio: 16/9;
@@ -244,11 +246,12 @@ body {
 @media screen and (min-width: 768px) {
   .gallery .gallery__item {
     flex: 1 1 30%;
-    max-width: 30%;
+    overflow-y: auto;
   }
 }
 @media screen and (min-width: 1280px) {
   .gallery .gallery__item {
     margin-bottom: 20px;
+    overflow-y: auto;
   }
 }/*# sourceMappingURL=bio.css.map */
