--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -221,10 +221,14 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    box-sizing: border-box;
+
     gap: 16px;
   }
 
   .gallery__item {
+    aspect-ratio: 16 / 9;
+
     flex: 1 1 100%;
     max-width: 100%;
     aspect-ratio: 16 / 9;
@@ -235,11 +239,13 @@ body {
 
     @include tablet {
       flex: 1 1 30%;
-      max-width: 30%;
+
+      overflow-y: auto;
     }
 
     @include desktop {
       margin-bottom: 20px;
+      overflow-y: auto;
     }
   }
 }
