--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -153,7 +153,6 @@ body {
   }
   &__quote {
     margin: 0;
-
     padding: 16px 0;
     text-align: left;
     font-size: 0.875rem;
@@ -164,7 +163,7 @@ body {
 
     @include tablet {
       flex-direction: column;
-      padding: 36px 0;
+      padding: 36px 100px;
       width: 100%;
 
       font-size: 1.5rem;
@@ -196,11 +195,17 @@ body {
       line-height: 1.375rem;
       font-weight: 500;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
     }
   }
   &__description-text {
     font-weight: 400;
+  }
+  &__info {
+    @include tablet {
+      display: flex;
+      gap: 15px;
+    }
   }
 }
 
