--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -115,7 +115,8 @@ body {
       padding: 38px 0;
     }
   }
-
+  &__heading {
+  }
   &__heading-text {
     margin: 0;
     font-size: 1.5rem;
@@ -172,8 +173,8 @@ body {
     }
 
     @include desktop {
-      padding: 36px 0;
-      font-size: 24px;
+      padding: 40px 270px;
+      font-size: 1.5rem;
       line-height: 32px;
       font-weight: medium;
     }
