--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -255,3 +255,62 @@ body {
     }
   }
 }
+//footer design
+.footer {
+  background-color: $BandSite-Black;
+  color: $white;
+  text-align: left;
+  padding: 20px;
+  font-family: $font-stack;
+
+  &__title {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 300;
+    margin-bottom: 20px;
+    font-family: $font-stack;
+  }
+
+  &__socials {
+    display: flex;
+    justify-content: flex-start;
+
+    gap: 2rem;
+    margin-bottom: 20px;
+  }
+
+  &__details {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+    margin: 20px 0;
+
+    &-heading {
+      font-size: 0.875rem;
+      font-weight: 700;
+      font-family: $font-stack;
+    }
+    &-email {
+      font-size: 0.9rem;
+    }
+
+    .__details p:nth-child(3) {
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+
+    .__details p:nth-child(6) {
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+
+    .__details p:nth-child(9) {
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+  }
+
+  &__copyright {
+    margin-top: 20px;
+    font-size: 0.8rem;
+  }
+}
