--- a/styles/bio.css
+++ b/styles/bio.css
@@ -269,18 +269,43 @@ body {
   padding: 20px;
   font-family: Nunito Sans, sans-serif;
 }
+@media screen and (min-width: 768px) {
+  .footer {
+    align-items: center;
+    text-align: center;
+  }
+}
+.footer p {
+  font-weight: 300;
+}
 .footer__title {
   font-size: 1.5rem;
   line-height: 2rem;
-  font-weight: 300;
+  font-weight: 400;
   margin-bottom: 20px;
   font-family: Nunito Sans, sans-serif;
+}
+@media screen and (min-width: 768px) {
+  .footer__title {
+    margin-bottom: 0.625rem;
+    font-size: 2.25rem;
+    line-height: 2rem;
+    font-weight: 400;
+    padding: 30px;
+  }
 }
 .footer__socials {
   display: flex;
   justify-content: flex-start;
-  gap: 2rem;
+  gap: 1.25rem;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .footer__socials {
+    margin-top: 35px;
+    margin-left: 1.25rem;
+    gap: 2.5rem;
+  }
 }
 .footer__details {
   font-size: 0.9rem;
@@ -289,7 +314,7 @@ body {
 }
 .footer__details-heading {
   font-size: 0.875rem;
-  font-weight: 700;
+  font-weight: 600;
   font-family: Nunito Sans, sans-serif;
 }
 .footer__details-email {
@@ -307,7 +332,63 @@ body {
   margin-top: 10px;
   margin-bottom: 20px;
 }
+@media screen and (min-width: 768px) {
+  .footer__details {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__top-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__header-container {
+    flex-direction: row;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+.footer__logo {
+  margin-top: 1.875rem;
+  width: 7.5rem;
+  height: 1.25rem;
+}
+.footer__address-info {
+  display: flex;
+  flex-direction: column;
+}
+.footer__bottom-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.footer__address-detai {
+  flex-direction: column;
+  width: 100%;
+  display: flex;
+  gap: 40px;
+}
+@media screen and (min-width: 768px) {
+  .footer__address-detai {
+    flex-direction: row;
+  }
+}
+.footer__address-first {
+  text-align: left;
+}
+.footer__address-second {
+  text-align: left;
+}
+.footer__address-third {
+  text-align: left;
+}
 .footer__copyright {
-  margin-top: 20px;
+  margin-top: 10px;
   font-size: 0.8rem;
 }/*# sourceMappingURL=bio.css.map */
