--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,11 +1,23 @@
 @font-face {
   font-family: "Nunito";
-  src: url("/assets/font/NunitoSans-Bold.woff"), url("/assets/font/NunitoSans-Medium.woff"), url("/assets/font/NunitoSans-Regular.woff");
+  src: url(/assets/font/NunitoSans-Regular.woff) format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url(/assets/font/NunitoSans-Bold.woff) format("truetype");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url(/assets/font/NunitoSans-Medium.woff) format("truetype");
+  font-weight: 500;
 }
 html,
 body {
   margin: 0;
   padding: 0;
+  font-family: "Nunito", sans-serif;
 }
 
 .hero {
@@ -278,6 +290,16 @@ body {
 .footer p {
   font-weight: 300;
 }
+.footer__address-heading {
+  font-size: 0.875rem;
+  font-weight: 500;
+  font-family: "Nunito";
+}
+.footer__address-email {
+  font-size: 0.9rem;
+  font-family: "Nunito";
+  font-weight: 400;
+}
 .footer__title {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -311,14 +333,6 @@ body {
   font-size: 0.9rem;
   line-height: 1.4rem;
   margin: 20px 0;
-}
-.footer__details-heading {
-  font-size: 0.875rem;
-  font-weight: 600;
-  font-family: Nunito Sans, sans-serif;
-}
-.footer__details-email {
-  font-size: 0.9rem;
 }
 .footer__details .__details p:nth-child(3) {
   margin-top: 10px;
