--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -50,7 +50,7 @@ body {
   }
 
   &__text {
-    font-family: $font-stack;
+    font-family: 'Nunito';
     font-weight: 700;
     position: absolute;
     top: 50%;
@@ -71,7 +71,7 @@ body {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
-    font-family: $font-stack;
+    font-family: 'Nunito';
     color: $white;
 
     @include tablet {
@@ -122,7 +122,7 @@ body {
     margin: 0;
     font-size: 1.5rem;
     line-height: 2rem;
-    font-family: $font-stack;
+    font-family: 'Nunito';
     font-weight: 700;
     color: $BandSite-Black;
 
@@ -158,7 +158,7 @@ body {
     padding: 16px 0;
     text-align: left;
     font-size: 0.875rem;
-    font-family: $font-stack;
+    font-family: 'Nunito';
     line-height: 1.35rem;
     font-weight: 700;
     color: $BandSite-Black;
@@ -262,37 +262,27 @@ body {
   color: $white;
   text-align: left;
   padding: 20px;
-  font-family: $font-stack;
+  font-family: 'Nunito';
+
   @include tablet {
     align-items: center;
     text-align: center;
   }
+
   p {
     font-weight: 300;
   }
-  &__address-heading {
-    font-size: 0.875rem;
-    font-weight: 500;
-    font-family: 'Nunito';
-  }
-  &__address-email {
-    font-size: 0.9rem;
-    font-family: 'Nunito';
-    font-weight: 400;
-  }
+
   &__title {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 400;
     margin-bottom: 20px;
-    font-family: $font-stack;
+    font-family: 'Nunito';
 
     @include tablet {
-      margin-bottom: 0.625rem;
-
-      font-size: 2.25rem;
       line-height: 2rem;
-      font-weight: 400;
+      font-weight: 700;
       padding: 30px;
     }
   }
@@ -302,6 +292,7 @@ body {
     justify-content: flex-start;
     gap: 1.25rem;
     margin-bottom: 20px;
+
     @include tablet {
       margin-top: 35px;
       margin-left: 1.25rem;
@@ -314,17 +305,9 @@ body {
     line-height: 1.4rem;
     margin: 20px 0;
 
-    .__details p:nth-child(3) {
-      margin-top: 10px;
-      margin-bottom: 20px;
-    }
-
-    .__details p:nth-child(6) {
-      margin-top: 10px;
-      margin-bottom: 20px;
-    }
-
-    .__details p:nth-child(9) {
+    p:nth-child(3),
+    p:nth-child(6),
+    p:nth-child(9) {
       margin-top: 10px;
       margin-bottom: 20px;
     }
@@ -335,18 +318,19 @@ body {
       gap: 30px;
     }
   }
-  @include tablet {
-    &__top-container {
+
+  &__top-container {
+    @include tablet {
       display: flex;
       flex-direction: row;
-
       justify-content: space-between;
     }
   }
-  @include tablet {
-    &__header-container {
-      flex-direction: row;
+
+  &__header-container {
+    @include tablet {
       display: flex;
+      flex-direction: row;
       justify-content: flex-start;
       align-items: center;
     }
@@ -356,41 +340,76 @@ body {
     margin-top: 1.875rem;
     width: 7.5rem;
     height: 1.25rem;
-
-    @include tablet {
-    }
   }
+
   &__address-info {
     display: flex;
     flex-direction: column;
+
+    @include desktop {
+      flex-direction: column;
+    }
   }
+
   &__bottom-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+
+    @include desktop {
+      flex-direction: column;
+    }
   }
+
   &__address-detai {
+    display: flex;
     flex-direction: column;
     width: 100%;
-    display: flex;
+
     @include tablet {
       flex-direction: row;
+      gap: 40px;
     }
-    gap: 40px;
-  }
-  &__address-first {
-    text-align: left;
+
+    @include desktop {
+      flex-direction: row;
+      gap: 2.5rem;
+      justify-content: center;
+      text-align: center;
+      align-items: center;
+    }
   }
 
-  &__address-second {
-    text-align: left;
-  }
-
+  &__address-first,
+  &__address-second,
   &__address-third {
     text-align: left;
   }
+
+  &__address-heading {
+    font-size: 0.875rem;
+    font-weight: 500;
+    font-family: 'Nunito';
+
+    @include tablet {
+      font-size: 1.5rem;
+    }
+  }
+
+  &__address-email {
+    font-size: 0.875rem;
+    font-family: 'Nunito';
+    font-weight: 400;
+  }
+
   &__copyright {
     margin-top: 10px;
-    font-size: 0.8rem;
+    font-size: 0.8125rem;
+    font-weight: 400;
+    font-family: 'Nunito';
+
+    @include tablet {
+      font-size: 0.875rem;
+    }
   }
 }
