--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -176,7 +176,7 @@ body {
     @include desktop {
       padding: 40px 270px;
       font-size: 1.5rem;
-      line-height: 32px;
+      line-height: 2rem;
       font-weight: medium;
     }
   }
