--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,8 +1,7 @@
 @use 'partials/variables' as *;
 @use 'partials/mixins' as *;
-
+@use 'partials/global' as *;
 @use 'partials/typography' as *;
-
 html,
 body {
   margin: 0;
