--- a/styles/bio.css
+++ b/styles/bio.css
@@ -410,23 +410,107 @@ body {
   }
 }
 
-.footer {
-  background-color: #323232;
+.comment-section {
+  max-width: 37rem;
+  margin: auto;
+  padding: 1rem;
+}
+
+.comment-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.comment {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1rem;
+  background: #ffffff;
+  border-radius: 8px;
+}
+.comment img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.comment__component {
+  display: flex;
+  flex-direction: column;
+}
+.comment__component h3 {
+  margin: 0;
+  font-size: 1rem;
+  color: #333;
+}
+.comment__component p {
+  margin: 0.5rem 0 0;
+  font-size: 0.9rem;
+  color: #555;
+}
+
+.add-new {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  margin-top: 1.5rem;
+  padding: 1rem;
+  background: #ffffff;
+  border-radius: 4px;
+}
+.add-new .form-header {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.add-new label {
+  font-size: 0.9rem;
+  font-weight: medium;
+  color: #afafaf;
+}
+.add-new input, .add-new textarea {
+  width: 80%;
+  color: #000000;
+  padding: 0.5rem;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 200;
+}
+.add-new button {
+  padding: 0.75rem;
+  background: #323232;
+  color: white;
+  font-size: 1rem;
+  height: 2.5rem;
+  width: auto;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.add-new .footer {
+  background-color: #000000;
   color: #ffffff;
   text-align: left;
   padding: 20px;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
-  .footer {
+  .add-new .footer {
     align-items: center;
     text-align: center;
   }
 }
-.footer p {
+.add-new .footer p {
   font-weight: 300;
 }
-.footer__title {
+.add-new .footer__title {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 400;
@@ -434,7 +518,7 @@ body {
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
-  .footer__title {
+  .add-new .footer__title {
     font-size: 2.25rem;
     line-height: 2rem;
     font-weight: 700;
@@ -442,93 +526,93 @@ body {
   }
 }
 @media screen and (min-width: 1280px) {
-  .footer__title {
+  .add-new .footer__title {
     padding: 34px;
   }
 }
-.footer__socials {
+.add-new .footer__socials {
   display: flex;
   justify-content: flex-start;
   gap: 1.25rem;
   margin-bottom: 20px;
 }
 @media screen and (min-width: 768px) {
-  .footer__socials {
+  .add-new .footer__socials {
     margin-top: 35px;
     margin-left: 1.25rem;
     gap: 2.5rem;
   }
 }
-.footer__details {
+.add-new .footer__details {
   font-size: 0.9rem;
   line-height: 1.4rem;
   margin: 20px 0;
 }
-.footer__details p:nth-child(3),
-.footer__details p:nth-child(6),
-.footer__details p:nth-child(9) {
+.add-new .footer__details p:nth-child(3),
+.add-new .footer__details p:nth-child(6),
+.add-new .footer__details p:nth-child(9) {
   margin-top: 10px;
   margin-bottom: 20px;
 }
 @media screen and (min-width: 768px) {
-  .footer__details {
+  .add-new .footer__details {
     flex-direction: column;
     align-items: center;
     gap: 30px;
   }
 }
 @media screen and (min-width: 768px) {
-  .footer__top-container {
+  .add-new .footer__top-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
 }
 @media screen and (min-width: 768px) {
-  .footer__header-container {
+  .add-new .footer__header-container {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
   }
 }
-.footer__logo {
+.add-new .footer__logo {
   margin-top: 1.875rem;
   width: 7.5rem;
   height: 1.25rem;
 }
-.footer__address-info {
+.add-new .footer__address-info {
   display: flex;
   flex-direction: column;
 }
 @media screen and (min-width: 1280px) {
-  .footer__address-info {
+  .add-new .footer__address-info {
     flex-direction: column;
   }
 }
-.footer__bottom-container {
+.add-new .footer__bottom-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 @media screen and (min-width: 1280px) {
-  .footer__bottom-container {
+  .add-new .footer__bottom-container {
     flex-direction: column;
   }
 }
-.footer__address-detai {
+.add-new .footer__address-detai {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 @media screen and (min-width: 768px) {
-  .footer__address-detai {
+  .add-new .footer__address-detai {
     flex-direction: row;
     gap: 40px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .footer__address-detai {
+  .add-new .footer__address-detai {
     flex-direction: row;
     gap: 2.5rem;
     justify-content: center;
@@ -536,32 +620,32 @@ body {
     align-items: center;
   }
 }
-.footer__address-first, .footer__address-second, .footer__address-third {
+.add-new .footer__address-first, .add-new .footer__address-second, .add-new .footer__address-third {
   text-align: left;
 }
-.footer__address-heading {
+.add-new .footer__address-heading {
   font-size: 0.875rem;
   font-weight: 500;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
-  .footer__address-heading {
+  .add-new .footer__address-heading {
     font-size: 1.5rem;
   }
 }
-.footer__address-email {
+.add-new .footer__address-email {
   font-size: 0.875rem;
   font-family: "Nunito";
   font-weight: 400;
 }
-.footer__copyright {
+.add-new .footer__copyright {
   margin-top: 10px;
   font-size: 0.8125rem;
   font-weight: 400;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
-  .footer__copyright {
+  .add-new .footer__copyright {
     font-size: 0.875rem;
   }
 }/*# sourceMappingURL=bio.css.map */
