--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -272,9 +272,90 @@ body {
     }
   }
 }
-//footer design
+//Comment Section Styles
+.comment-section{
+  max-width: 37rem;
+  margin: auto;
+  padding: 1rem;
+}
+.comment-list{
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
+  margin-top: 1rem;
+}
+.comment{
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1rem;
+  background: $white; 
+  border-radius: 8px;
+  img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  &__component {
+    display: flex;
+    flex-direction: column;
+    h3 {
+      margin: 0;
+      font-size: 1rem;
+      color: #333;
+    }
+    p {
+      margin: 0.5rem 0 0;
+      font-size: 0.9rem;
+      color: #555;
+    }
+}
+
+}
+
+//comment form
+.add-new{
+  display: flex;
+  flex-direction: column;
+  gap:0.75rem;
+  margin-top: 1.5rem;
+  padding:1rem;
+  background: $white;
+  border-radius: 4px;
+  .form-header {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  label {
+    font-size: 0.9rem;
+    font-weight:medium;
+    color: $silver;
+  }
+  input, textarea {
+    width: 80%;
+    color: $BandSite-DarkBlack;
+    padding: 0.5rem;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: 200;
+  } 
+  button {
+    padding: 0.75rem;
+    background:$BandSite-Black;
+    color: white;
+    font-size: 1rem;
+    height: 2.5rem  ;
+    width: auto;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
 .footer {
-  background-color: $BandSite-Black;
+  background-color:$BandSite-DarkBlack;
   color: $white;
   text-align: left;
   padding: 20px;
@@ -432,4 +513,5 @@ body {
       font-size: 0.875rem;
     }
   }
+}
 }
